<resources>
    <string name="app_name">UserLAnd</string>
    <string name="welcome">Welcome to UserLAnd!</string>
    <string name="permission_request_code">1000</string>
    <string name="apps">Apps</string>
    <string name="sessions">Sessions</string>
    <string name="edit_session">Edit Session</string>
    <string name="filesystems">Filesystems</string>
    <string name="edit_filesystem">Edit Filesystem</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="toc">Terms &amp; Conditions</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="button_continue">Continue</string>
    <string name="button_submit">Submit</string>
    <string name="button_logout">Log Out</string>
    <string name="app_info">App Info</string>
    <string name="stop_app">Stop App</string>
    <string name="kill_service">Kill Service</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="account">Account</string>
    <string name="hint_filesystem_name">Filesystem name</string>
    <string name="hint_session_name">Session Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_vnc_password">VNC Password</string>
    <string name="error_session_name">You must provide a session name</string>
    <string name="error_filesystem_name">You must provide a filesystem name</string>
    <string name="error_username">You must provide a username</string>
    <string name="error_empty_field">Each field must be entered!</string>
    <string name="error_app_description_not_found">Could not find a description for this app. Try refreshing.</string>
    <string name="error_vnc_password_length_incorrect">VNC Password must be between 6 to 8 characters!</string>
    <string name="error_username_invalid">Username has invalid characters</string>
    <string name="error_password_invalid">Password has invalid characters</string>
    <string name="error_vnc_password_invalid">VNC Password has invalid characters</string>
    <string name="prompt_filesystem">Filesystem:</string>
    <string name="prompt_service_type">Service Type:</string>
    <string name="prompt_client_type">Client Type:</string>
    <string name="prompt_app_connection_type_preference">Please select a connection type: </string>
    <string name="prompt_create_account">Don\'t have an account? Register here</string>
    <string name="prompt_login">Already have an account? Login here</string>
    <string name="prompt_remote_or_local">Would you like to run this session locally on your device or remotely on the cloud?</string>
    <string name="services_notification_channel_id">UserLAndServices</string>
    <string name="services_notification_channel_name">Services</string>
    <string name="services_notification_channel_description">Persistent services</string>
    <string name="service_notification_title">UserLAnd</string>
    <string name="service_notification_description">UserLAnd is running a background service.</string>
    <string name="progress_basic_app_setup">Setting up app database information&#8230;</string>
    <string name="progress_fetching_asset_lists">Fetching asset lists&#8230;</string>
    <string name="progress_checking_for_required_updates">Checking whether updates are required&#8230;</string>
    <string name="progress_downloading">Downloading required assets&#8230;</string>
    <string name="progress_downloading_check_updates">Looking for updates.</string>
    <string name="progress_downloading_out_of">%1$d out of %2$d complete</string>
    <string name="progress_copying_downloads">Copying downloaded files to local storage&#8230;</string>
    <string name="progress_setting_up">Setting up filesystem&#8230;</string>
    <string name="progress_setting_up_extract_text">Extracting: %1$s</string>
    <string name="progress_starting">Starting service&#8230;</string>
    <string name="progress_connecting">Connecting to service&#8230;</string>
    <string name="pref_app_category">App Preferences</string>
    <string name="pref_default_landing_page_title">Default Landing Page</string>
    <string name="pref_default_landing_page_message">Select the page you would like to open the app with.</string>
    <string name="pref_proot_category">PRoot Preferences</string>
    <string name="pref_proot_debugging_enabled_title">PRoot Debugging Logs Enabled</string>
    <string name="pref_proot_debugging_enabled_summary">Only necessary if having problems with the app. Log file stored at\n/mnt/sdcard/PRoot_Debug_Log</string>
    <string name="pref_proot_debugging_level_title">Debug Verbosity Level</string>
    <string name="pref_proot_debugging_level_summary">The higher the number, the greater the verbosity.</string>
    <string name="pref_proot_debugging_level_default">-1</string>
    <string name="pref_proot_local_file_enabled_title">Log To Local File</string>
    <string name="pref_proot_local_file_enabled_summary">Store (potentially large) file at /mnt/sdcard/PRoot_Debug_Log</string>
    <string name="pref_proot_delete_debug_file_title">Delete Debug File</string>
    <string name="beta_message">Experiencing bugs or want to request a feature? Our Github page is the best place to go to get a fast response.</string>
    <string name="supported_services">Currently supported services:</string>
    <string name="terminology">Terminology:</string>
    <string name="desc_apps_title">Apps:</string>
    <string name="desc_apps_message">Apps are the easiest way to launch common Linux applications.</string>
    <string name="desc_sessions_title">Sessions:</string>
    <string name="desc_sessions_message">Sessions start a server on a filesystem, which then allows you to connect to it using a third-party client application.</string>
    <string name="desc_filesystems_title">Filesystems:</string>
    <string name="desc_filesystems_message">Filesystems are just what they sound like: A collection of users and a file structure that allows Linux-like behavior.</string>
    <string name="support_dropbear">SSH - Dropbear</string>
    <string name="support_tightvnc">VNC - TightVNC</string>
    <string name="client_ssh">SSH</string>
    <string name="client_vnc">VNC</string>
    <string name="button_ok">OK!</string>
    <string name="general_error_title">Something unexpected happened!</string>
    <string name="filesystem_credentials_reasoning">We\'re creating a filesystem for your apps. Please enter the relevant required information for us to use as defaults for this filesystem.</string>
    <string name="alert_play_service_error_message">We\'re having trouble accessing the Google Play services to complete this action. Please try again later, and if the problem continues report it to a developer.</string>
    <string name="alert_play_store_required">Paid apps require access to the Google Play Store for verification of payment. Please install it to continue.</string>
    <string name="alert_subscriptions_unsupported_message">It looks like your version of the Play Store is too old to support subscriptions. Please update it to continue.</string>
    <string name="alert_need_client_app_title">Can\'t find a client app!</string>
    <string name="alert_need_client_app_message">You\'ll need an SSH or VNC client to complete this action, but it looks like you don\'t have the play store installed. Please install an SSH or VNC client application to continue.</string>
    <string name="alert_permissions_necessary_title">UserLAnd requires permissions!</string>
    <string name="alert_permissions_necessary_message">To continue, enable storage permissions to allow UserLAnd to download files and move them from external storage to app local storage.</string>
    <string name="alert_permissions_necessary_cancel_button">Cancel</string>
    <string name="alert_network_unavailable_title">No network available</string>
    <string name="alert_network_unavailable_message">UserLAnd requires network availability to download required assets.</string>
    <string name="alert_network_required_for_refresh">Refreshing apps requires an available or stronger network connection.</string>
    <string name="alert_network_strength_too_low_for_downloads">Your network strength is too low to download required assets. Please try again with a strong connection.</string>
    <string name="alert_asset_list_failure_title">Could not retrieve asset lists.</string>
    <string name="alert_asset_list_failure_message">Either the asset lists cannot be fetched or they are not cached locally. Please try again shortly.</string>
    <string name="alert_extraction_failure_title">Could not extract filesystem.</string>
    <string name="alert_extraction_failure_message">Something went wrong. Try deleting the filesystem and trying again.</string>
    <string name="alert_filesystem_missing_requirements_title">This filesystem is missing required assets!</string>
    <string name="alert_filesystem_missing_requirements_message">Please try starting the session again, and report this to a developer!</string>
    <string name="alert_wifi_disabled_title">No wifi!</string>
    <string name="alert_wifi_disabled_message">A large asset (~80mb) needs to be downloaded.</string>
    <string name="alert_wifi_disabled_continue_button">Continue</string>
    <string name="alert_wifi_disabled_turn_on_wifi_button">Turn On Wifi</string>
    <string name="alert_wifi_disabled_cancel_button">Cancel</string>
    <string name="filesystem_delete_failure">Failed to delete!</string>
    <string name="session_unique_name_required">Sessions require a unique name!</string>
    <string name="filesystem_unique_name_required">Filesystems require a unique name!</string>
    <string name="download_client_app">Please download the associated client app and try again.</string>
    <string name="single_session_supported">UserLAnd currently only supports a single active session!</string>
    <string name="no_supported_architecture">UserLAnd does not currently support your devices architecture.</string>
    <string name="debug_log_deleted">Debug log deleted or does not exist!</string>
    <string name="filesystem_extraction_failed">Could not extract filesystem!</string>
    <string name="no_assets_need_updating">No assets need updating!</string>
    <string name="client_not_found">Could not find a way to handle the type of client this session is attempting to start!</string>
    <string name="error_apps_renamed">Apps cannot be run if their session or filesystem have been renamed.</string>
    <string name="desc_arrow">Image: Arrow denoting connection between session and filesystem.</string>
    <string name="desc_filesystem_type">Image: Distribution logo</string>
    <string name="free_annotation">(Free)</string>
    <string name="paid_annotation">(Paid)</string>
    <string name="custom_sessions">Custom Sessions</string>
    <string name="apps_sessions">Apps Sessions</string>
</resources>