<?xml version="1.0" encoding="utf-8"?>
<!-- TODO real settings -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_preferences"
        android:key="pref_app_category" >
        <CheckBoxPreference
            android:key="pref_default_password_message_enabled"
            android:title="@string/pref_enable_default_password_message"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_proot_category"
        android:key="pref_proot_category" >
        <CheckBoxPreference
            android:key="pref_proot_debug_enabled"
            android:title="@string/pref_proot_debugging_enabled_title"
            android:summary="@string/pref_proot_debugging_enabled_summary"
            android:defaultValue="false" />
        <ListPreference
            android:dependency="pref_proot_debug_enabled"
            android:key="pref_proot_debug_level"
            android:title="@string/pref_proot_debugging_level_title"
            android:summary="@string/pref_proot_debugging_level_summary"
            android:entries="@array/proot_debug_levels"
            android:entryValues="@array/proot_debug_levels"
            android:defaultValue="@string/pref_proot_debugging_level_default" />
    </PreferenceCategory>
</PreferenceScreen>