<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_account_login"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_account_email"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"/>
    <EditText
        android:id="@+id/input_account_password"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"/>
    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal" >

        <TextView
            android:id="@+id/register_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="#3af"
            android:textSize="12sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/prompt_create_account" />

    </LinearLayout>
</LinearLayout>